# controllers/player.js
@@ -1,16 +1,19 @@
 const Player = require("../models/Player");
 const mongoose = require("mongoose");
+const { Types } = require("mongoose");
 
-const getAll = async (req, res, next) => {
+const getAll = async (req, res) => {
   try {
     const players = await Player.find().lean();
     res.status(200).json(players);
-  } catch (err) {
-    next(err);
+  } catch (error) {
+    return res
+      .status(500)
+      .json({ message: "Error retrieving players", error: error.message });
   }
 };
 
-const getSingle = async (req, res, next) => {
+const getSingle = async (req, res) => {
   try {
     const { id } = req.params;
 
@@ -24,9 +27,9 @@ const getSingle = async (req, res, next) => {
     if (!player) return res.status(404).json({ message: "Player not found" });
     res.status(200).json(player);
   } catch (error) {
-    const err = new Error("Error fetching players");
-    err.status = 400;
-    next(err);
+    return res
+      .status(500)
+      .json({ message: "Error retrieving player", error: error.message });
   }
 };
 
@@ -39,16 +42,16 @@ const create = async (req, res) => {
       });
     }
 
-    const newPlayer = { firstName, lastName, email, position, team };
+    const newPlayer = { firstName, lastName, birthday, position, team };
     const result = await Player.create(newPlayer);
     res.status(201).json({
       message: "Player creatd successefully",
       playerId: result._id,
     });
   } catch (error) {
-    const err = new Error("Some error occurred while creating the player.");
-    err.status = 500;
-    next(err);
+    return res
+      .status(500)
+      .json({ message: "Error creating player", error: error.message });
   }
 };
 
@@ -60,32 +63,32 @@ const updateByid = async (req, res) => {
         message: "Data to update can not be empty!",
       });
     }
-    const { firstName, lastName, email, position, team } = req.body;
+    const { firstName, lastName, birthday, position, team } = req.body;
 
     const player_id = req.params.id;
 
     const result = await Player.findByIdAndUpdate(
-      team_id,
-      { firstName, lastName, email, position, team },
+      player_id,
+      { firstName, lastName, birthday, position, team },
       { new: true, runValidators: true }
     );
 
     if (!result) {
       res.status(404).send({
-        message: `Cannot update Player with id=${player_id}. Maybe Contact was not found!`,
+        message: `Cannot update Player with id=${player_id}. Maybe Player was not found!`,
       });
     } else res.send({ message: "Player was updated successfully." });
   } catch (error) {
-    const err = new Error("'Some error occurred while updating the contact.'");
-    err.status = 500;
-    next(err);
+    return res
+      .status(500)
+      .json({ message: "Error updating player", error: error.message });
   }
 };
 
 const deleteByid = async (req, res) => {
   try {
-    const playerId = new ObjectId(req.params.id);
-    const result = Player.findByIdAndDelete(playerId);
+    const { id } = req.params;
+    const result = await Player.findByIdAndDelete(id);
     if (!result) {
       return res.status(404).json({
         message: `Player with id=${playerId} not found.`,
@@ -96,9 +99,9 @@ const deleteByid = async (req, res) => {
       message: "Player deleted successfully.",
     });
   } catch (error) {
-    const err = new Error("'Some error occurred while updating the player.'");
-    err.status = 500;
-    next(err);
+    return res
+      .status(500)
+      .json({ message: "Error deleting player", error: error.message });
   }
 };
 
