# models/Team.js
@@ -7,9 +7,9 @@ const teamSchema = new mongoose.Schema({
     required: true,
     enum: ["CONMEBOL", "UEFA", "AFC", "CAF", "CONCACAF", "OFC"],
   },
-  fifaRank: { type: Number, required: true, trim: true },
+  fifaRank: { type: Number, required: true },
   currentCoach: { type: String, required: true, trim: true },
-  worldCupsWon: { type: Number, required: true, trim: true },
+  worldCupsWon: { type: Number, required: true },
 });
 
 module.exports = mongoose.model("Team", teamSchema, "teams");
